syntax = "proto3";

// -----------------------------------------------------------------------------
//  HoloCanvas Governance Protocol
//
//  File:        HoloCanvas/shared/protocol/governance.proto
//  Project:     HoloCanvas – A Micro-Gallery Blockchain for Generative Artifacts
//
//  Overview:
//    This schema defines the canonical, cross-service governance protocol used
//    throughout the HoloCanvas platform.  All micro-services—whether running on
//    resource-constrained edge devices or within high-throughput validator
//    clusters—interoperate through these messages over gRPC and Kafka.
//
//    The interface covers:
//      • Proposal life-cycle management (create, activate, execute, expire)
//      • Weighted, delegated-stake voting
//      • Real-time streaming of governance events
//      • Audit-friendly receipts for every mutating action
//
//  NOTE:  All monetary values are encoded as string-based decimals to avoid
//         floating-point ambiguity across different architectures.
// -----------------------------------------------------------------------------

package holocanvas.governance.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package    = "github.com/holocanvas/proto/go/governance/v1;governance";
option java_package  = "com.holocanvas.governance.v1";
option objc_class_prefix = "HCGOV";
option csharp_namespace = "HoloCanvas.Governance.V1";

// -----------------------------------------------------------------------------
//  Enumerations
// -----------------------------------------------------------------------------

// High-level category of a proposal.
enum ProposalType {
  PROPOSAL_TYPE_UNSPECIFIED = 0;
  PROPOSAL_TYPE_PARAMETER_CHANGE = 1;   // Change to chain or app parameters.
  PROPOSAL_TYPE_ARTIFACT_ACTION  = 2;   // Action on a specific NFT / artifact.
  PROPOSAL_TYPE_TEXT             = 3;   // Free-form text (off-chain execution).
  PROPOSAL_TYPE_SOFTWARE_UPGRADE = 4;   // Chain or service upgrade.
}

// Current state in the proposal’s life-cycle.
enum ProposalStatus {
  PROPOSAL_STATUS_UNSPECIFIED = 0;
  PROPOSAL_STATUS_DRAFT       = 1;
  PROPOSAL_STATUS_ACTIVE      = 2;  // Voting open.
  PROPOSAL_STATUS_PASSED      = 3;
  PROPOSAL_STATUS_REJECTED    = 4;
  PROPOSAL_STATUS_EXECUTED    = 5;  // Successfully executed on-chain.
  PROPOSAL_STATUS_EXPIRED     = 6;  // Voting period elapsed, quorum not met.
}

// Choices available to a voter.
enum VoteChoice {
  VOTE_CHOICE_UNSPECIFIED = 0;
  VOTE_CHOICE_YES         = 1;
  VOTE_CHOICE_NO          = 2;
  VOTE_CHOICE_ABSTAIN     = 3;
  VOTE_CHOICE_VETO        = 4;
}

// -----------------------------------------------------------------------------
//  Core Messages
// -----------------------------------------------------------------------------

// Canonical identifier for a proposal (UUID-v7 recommended).
message ProposalID {
  string value = 1; // e.g., "7e2b52e9-1d5b-7f3f-b109-e7ab4e418f17"
}

// Big-int decimal representation of a stake or token amount.
message DecCoin {
  string denom  = 1; // Token denomination, e.g., "HCAN".
  string amount = 2; // Arbitrary-precision decimal string.
}

// Signature wrapper (ED25519, ECDSA, etc.).
message Signature {
  string public_key = 1; // hex-encoded compressed public key.
  bytes  sig        = 2; // raw signature bytes.
  string algo       = 3; // e.g., "ed25519", "secp256k1".
}

// -----------------------------------------------------------------------------
//  Proposal
// -----------------------------------------------------------------------------
message Proposal {
  ProposalID             id                = 1;
  ProposalType           type              = 2;
  ProposalStatus         status            = 3;
  string                 title             = 4;
  string                 description       = 5;

  // Addresses (bech32 or hex) of accounts that authored the proposal.
  repeated string        authors           = 6;

  // Arbitrary content to be executed if the proposal passes.
  // For PARAMETER_CHANGE, this is a ParameterChangeSet;
  // for ARTIFACT_ACTION, an ArtifactAction; for TEXT, ignored.
  google.protobuf.Any    exec_payload      = 7;

  // Economic parameters
  DecCoin                deposit_required  = 8; // Stake required to submit.
  DecCoin                deposit_received  = 9; // Current stake collected.

  // Timing information
  google.protobuf.Timestamp submit_time         = 10;
  google.protobuf.Timestamp deposit_end_time    = 11;
  google.protobuf.Timestamp voting_start_time   = 12;
  google.protobuf.Timestamp voting_end_time     = 13;

  // Audit trail
  repeated Signature      signers           = 14;

  // Reserved fields for forward compatibility.
  reserved 15, 16, 17;
}

// -----------------------------------------------------------------------------
//  Vote
// -----------------------------------------------------------------------------
message Vote {
  ProposalID                   proposal_id = 1;
  string                       voter       = 2; // Voter account address.
  VoteChoice                   choice      = 3;
  google.protobuf.Timestamp    timestamp   = 4;
  DecCoin                      voting_power= 5; // Delegated stake weight.
  Signature                    sig         = 6; // Signed Vote hash.
}

// -----------------------------------------------------------------------------
//  Tally
// -----------------------------------------------------------------------------
message TallyResult {
  ProposalID proposal_id = 1;

  DecCoin yes_count      = 2;
  DecCoin no_count       = 3;
  DecCoin abstain_count  = 4;
  DecCoin veto_count     = 5;

  // Total stake that participated in voting.
  DecCoin total_voting_power = 6;

  // Whether quorum was met given the current governance ruleset.
  bool quorum_met = 7;
}

// -----------------------------------------------------------------------------
//  Event Wrapper
// -----------------------------------------------------------------------------
message GovernanceEvent {
  oneof event {
    Proposal     proposal_submitted = 1;
    Vote         vote_cast          = 2;
    TallyResult  tally_updated      = 3;
    ProposalID   proposal_executed  = 4; // ID of executed proposal.
    ProposalID   proposal_expired   = 5; // ID of expired proposal.
  }

  google.protobuf.Timestamp emitted_at = 15;
}

// -----------------------------------------------------------------------------
//  Request / Response Wrappers
// -----------------------------------------------------------------------------

// SubmitProposal
message SubmitProposalRequest {
  Proposal proposal = 1;
}

message SubmitProposalResponse {
  ProposalID id        = 1;
  bool       accepted  = 2;
  string     reason    = 3; // Populated if !accepted.
}

// CastVote
message CastVoteRequest {
  Vote vote = 1;
}

message CastVoteResponse {
  bool   accepted = 1;
  string reason   = 2;
}

// QueryProposal
message QueryProposalRequest {
  ProposalID id = 1;
}

message QueryProposalResponse {
  Proposal     proposal      = 1;
  TallyResult  current_tally = 2;
}

// StreamGovernanceEvents
message StreamGovernanceEventsRequest {
  // Filter by proposal IDs; empty => all.
  repeated ProposalID proposals = 1;
}

// -----------------------------------------------------------------------------
//  gRPC Service Definition
// -----------------------------------------------------------------------------
service GovernanceService {
  // Submit a new proposal into the deposit period.
  rpc SubmitProposal          (SubmitProposalRequest) returns (SubmitProposalResponse);

  // Cast or update a vote on an active proposal.
  rpc CastVote                (CastVoteRequest)       returns (CastVoteResponse);

  // Fetch full proposal details plus live tally.
  rpc QueryProposal           (QueryProposalRequest)  returns (QueryProposalResponse);

  // Bi-directional event stream for real-time governance notifications.
  rpc StreamGovernanceEvents  (stream StreamGovernanceEventsRequest)
                              returns (stream GovernanceEvent);
}
